[Feat]: Added Hover and changed contact us

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         /* Google Fonts - Hind */
         @import url('https://fonts.googleapis.com/css2?family=Hind:wght@300;400;500;600&display=swap');
 
-        h1 {
+        h1,h2 {
             color: #013365;
         }
 
@@ -255,7 +255,7 @@
         </div>
     </div> -->
     <div class="container" style="margin-top: 65px;max-width: 780px;">
-        <h1 style="font-size: 30px;font-weight: bold;">Placement Procedure</h1><img
+        <h1 style="font-size: 30px;font-weight: bold;">Placement Procedure</h1><img class="zoom"
             src="assets/img/screenshot20230816at111812913-94o8-700h.png" style="max-width: 100%;">
         <p>Note: The SRF provides the primary basis of communicating the details of the positions offered to the
             candidates. It is, therefore, highly desirable that the form is completed in all respects and it would be
@@ -269,84 +269,23 @@
     </div>
     <div class="container" style="margin-top: 65px;max-width: 780px;">
         <h1 style="font-size: 30px;font-weight: bold;">Contact</h1>
+        <p style="margin-top: 10px;" >For any inquiries or if you would like to participate in recruitment activities at IIIT Dharwad,
+            please contact the Chairman of the Career Guidance Cell (CGC) via email at <a href="mailto:cgc@iiitdwd.ac.in">cgc@iiitdwd.ac.in</a> 
+            and mark cc to the Placement Lead at <a href="mailto:ujwal@iiitdwd.ac.in">ujwal@iiitdwd.ac.in</a></p>
         <div class="row" style="margin-top: 25px;">
-            <div class="col-lg-7">
-                <div class="row">
-                    <div class="col">
-                        <h1 style="font-size: 16px;"><strong>Placements Activities Contact</strong></h1>
-                        <p style="font-size: 14px;margin-bottom: 8px;"><strong>Dr. Prakash Pawar</strong></p>
-                        <p style="font-size: 12px;line-height: 0px;"><strong>cgc@iiitdwd.ac.in</strong></p>
-                    </div>
-                    <div class="col">
-                        <h1 style="font-size: 16px;"><strong>For Placement</strong></h1>
-                        <p style="font-size: 14px;margin-bottom: 8px;"><strong>Mr. Ujwal Doddamani</strong></p>
-                        <p style="font-size: 12px;line-height: 0px;"><strong>ujwal@iiitdwd.ac.in</strong></p>
-                        <p style="font-size: 12px;line-height: 0px;"><strong>+91 988637 6600</strong></p>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col" style="padding-top: 10px;">
-                        <h1 style="font-size: 16px;"><strong>Technical Events Contact</strong></h1>
-                        <p style="font-size: 14px;margin-bottom: 8px;"><strong>Dr. Sunil Saumya</strong></p>
-                        <p style="font-size: 12px;line-height: 0px;"><strong>sunil.saumya@iiitdwd.ac.in</strong></p>
-                    </div>
-                    <div class="col" style="padding-top: 10px;">
-                        <!-- <h1 style="font-size: 16px;"><strong>Placements Activities Contact</strong></h1>
-                        <p style="font-size: 14px;margin-bottom: 8px;"><strong>Dr. Rajendra Hegadi</strong></p>
-                        <p style="font-size: 12px;line-height: 0px;"><strong>cgc@iiitdwd.ac.in</strong></p> -->
-                        <h1 style="font-size: 16px;"><strong>Student Lead Coordinators</strong></h1>
-                        <p style="font-size: 12px;margin-bottom: 8px;"><strong>Om Morendha</strong></p>
-                        <p style="font-size: 12px;line-height: 0px;"><strong>20bcs095@iiitdwd.ac.in</strong></p>
-                        <p style="font-size: 12px;margin-bottom: 8px;"><strong>Shreyas Bulbule</strong></p>
-                        <p style="font-size: 12px;line-height: 0px;"><strong>20bds050@iiitdwd.ac.in</strong></p>
-                        <p style="font-size: 12px;margin-bottom: 8px;"><strong>Gaurang Belekar</strong></p>
-                        <p style="font-size: 12px;line-height: 0px;"><strong>20bec015@iiitdwd.ac.in</strong></p>
-                    </div>
-                </div>
+            <div class="col">
+                <h2 style="font-size: 18px;font-weight: bold;">CGC, Chairman</h2>
+                Dr. Prakash Pawar, Asst.Professor <br>
+                Email: <a href="mailto:cgc@iiitdwd.ac.in">cgc@iiitdwd.ac.in</a>
             </div>
             <div class="col">
-                <h1 style="font-size: 16px;"><strong>Student Coordinators</strong></h1>
-                <div style="line-height: 12px;">
-
-                    <p style="font-size: 12px;margin-bottom: 8px;"><strong>Siddhant Dixit</strong>
-                        <strong>20bcs123@iiitdwd.ac.in</strong>
-                    </p>
-                    <p style="font-size: 12px;margin-bottom: 8px;"><strong>Bhashapangu Nikhil</strong>
-                        <strong>20bds013@iiitdwd.ac.in</strong>
-                    </p>
-                    <p style="font-size: 12px;margin-bottom: 8px;"><strong>Harsh Rawat</strong>
-                        <strong>20bcs050@iiitdwd.ac.in</strong>
-                    </p>
-                    <p style="font-size: 12px;margin-bottom: 8px;"><strong>Rishika Kumari</strong>
-                        <strong>20bec038@iiitdwd.ac.in</strong>
-                    </p>
-                    <p style="font-size: 12px;margin-bottom: 8px;"><strong>Garimella Amruthavalli</strong>
-                        <strong>20bec014@iiitdwd.ac.in</strong>
-                    </p>
-                    <p style="font-size: 12px;margin-bottom: 8px;"><strong>Balusu Bhanu Prakash</strong>
-                        <strong>20bds012@iiitdwd.ac.in</strong>
-                    </p>
-                    <p style="font-size: 12px;margin-bottom: 8px;"><strong>Gaurav Agarwal</strong>
-                        <strong>20bcs047@iiitdwd.ac.in</strong>
-                    </p>
-                    <p style="font-size: 12px;margin-bottom: 8px;"><strong>Mohit Saini</strong>
-                        <strong>20bcs086@iiitdwd.ac.in</strong>
-                    </p>
-                    <p style="font-size: 12px;margin-bottom: 8px;"><strong>B Tarun</strong>
-                        <strong>20bcs025@iiitdwd.ac.in</strong>
-                    </p>
-                    <p style="font-size: 12px;margin-bottom: 8px;"><strong>Poornima</strong>
-                        <strong>20bds040@iiitdwd.ac.in</strong>
-                    </p>
-                    <p style="font-size: 12px;margin-bottom: 8px;"><strong>Kanishk Bajpai</strong>
-                        <strong>20bec020@iiitdwd.ac.in</strong>
-                    </p>
-                    <p style="font-size: 12px;margin-bottom: 8px;"><strong>Rajnish</strong>
-                        <strong>20bec035@iiitdwd.ac.in</strong>
-                    </p>
-                </div>
+                <h2 style="font-size: 18px;font-weight: bold;">CGC, Member Secretary <i>(Placement Lead)</i></h2>
+                Mr. Ujwal Doddamani,<br>
+                Email: <a href="mailto:ujwal@iiitdwd.ac.in">ujwal@iiitdwd.ac.in</a>
             </div>
         </div>
+        <p style="margin-top: 10px;" ><i><b style="color: #013365;" >Phone/WhatsApp Calls:</b></i> Feel free to reach out to Mr. Ujwal at +91 9886376600 for further
+            assistance.</p>
     </div>
     <div class="container" style="margin-top: 65px;max-width: 780px;">
         <div class="row" style="text-align: center;">
@@ -393,7 +332,9 @@
         </div>
         <form action="commitee_page/cgc-commitee.html">
             <div class="row" style="text-align: center;">
-                <div class="col"><button class="btn btn-primary" type="submit" style="width: 40%;background: #013365;margin-top: 18px;border-style: none;height: 50px;"><a> <strong>CGC Commitee</strong></button></div>
+                <div class="col"><button class="btn btn-primary" type="submit"
+                        style="width: 40%;background: #013365;margin-top: 18px;border-style: none;height: 50px;"><a>
+                            <strong>CGC Commitee</strong></button></div>
             </div>
         </form>
     </div>
