--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         /* Google Fonts - Hind */
         @import url('https://fonts.googleapis.com/css2?family=Hind:wght@300;400;500;600&display=swap');
 
-        h1,h2 {
+        h1,
+        h2 {
             color: #013365;
         }
 
@@ -269,8 +270,10 @@
     </div>
     <div class="container" style="margin-top: 65px;max-width: 780px;">
         <h1 style="font-size: 30px;font-weight: bold;">Contact</h1>
-        <p style="margin-top: 10px;" >For any inquiries or if you would like to participate in recruitment activities at IIIT Dharwad,
-            please contact the Chairman of the Career Guidance Cell (CGC) via email at <a href="mailto:cgc@iiitdwd.ac.in">cgc@iiitdwd.ac.in</a> 
+        <p style="margin-top: 10px;">For any inquiries or if you would like to participate in recruitment activities at
+            IIIT Dharwad,
+            please contact the Chairman of the Career Guidance Cell (CGC) via email at <a
+                href="mailto:cgc@iiitdwd.ac.in">cgc@iiitdwd.ac.in</a>
             and mark cc to the Placement Lead at <a href="mailto:ujwal@iiitdwd.ac.in">ujwal@iiitdwd.ac.in</a></p>
         <div class="row" style="margin-top: 25px;">
             <div class="col">
@@ -284,7 +287,8 @@
                 Email: <a href="mailto:ujwal@iiitdwd.ac.in">ujwal@iiitdwd.ac.in</a>
             </div>
         </div>
-        <p style="margin-top: 10px;" ><i><b style="color: #013365;" >Phone/WhatsApp Calls:</b></i> Feel free to reach out to Mr. Ujwal at +91 9886376600 for further
+        <p style="margin-top: 10px;"><i><b style="color: #013365;">Phone/WhatsApp Calls:</b></i> Feel free to reach out
+            to Mr. Ujwal at +91 9886376600 for further
             assistance.</p>
     </div>
     <div class="container" style="margin-top: 65px;max-width: 780px;">
@@ -330,23 +334,22 @@
                 </div>
             </div>
         </div>
-        <form action="commitee_page/cgc-commitee.html">
-            <div class="row" style="text-align: center;">
-                <div class="col"><button class="btn btn-primary" type="submit"
-                        style="width: 40%;background: #013365;margin-top: 18px;border-style: none;height: 50px;"><a>
-                            <strong>CGC Commitee</strong></button></div>
-            </div>
-        </form>
+        <div class="row" style="text-align: center;">
+            <div class="col"><button class="btn btn-primary" onclick="showCommitee"
+                    style="width: 40%;background: #013365;margin-top: 18px;border-style: none;height: 50px;"><a>
+                        <strong>View CGC Commitee</strong></button></div>
+        </div>
     </div>
-    <div class="container" style="margin-top: 65px;max-width: 780px;">
-        <h1 style="font-size: 30px;font-weight: bold;"></h1>
-        <p></p>
+    <div class="container" id="commitee" style="margin-top: 65px;max-width: 780px; display: none;">
+        John Cena
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script>
-
+        function showCommitee(){
+            
+        }
     </script>
     <script>
         var swiper = new Swiper(".slide-content", {
@@ -380,6 +383,7 @@
         });
     </script>
     <script>
+
         // Function to fetch and process the JSON file
         function fetchJSONFile(url, callback) {
             var xhr = new XMLHttpRequest();
