--- a/index.html
+++ b/index.html
@@ -105,6 +105,27 @@
                 display: none;
             }
         }
+
+        footer {
+            text-align: center;
+            padding: 20px;
+            background-color: #f0f0f0;
+        }
+
+        footer p {
+            margin: 0;
+        }
+
+        footer img {
+            width: 25px;
+            height: 25px;
+            vertical-align: middle;
+            margin-left: 5px;
+        }
+
+        footer a{
+            text-decoration: none;
+        }
     </style>
 </head>
 
@@ -133,15 +154,18 @@
         <h1 style="font-size: 30px;font-weight: bold;">Why Recruit from IIIT Dharwad?</h1>
         <div class="row" style="margin-top: 30px;">
             <div class="col-md-4 text-center" style="max-width: 33%;padding-left: 20px;">
-                <h1 id="cur_median_ctc" style="color: #50A5CA;">8 <strong style="color: #013365;">LPA</strong></h1>
+                <h1><span id="cur_median_ctc" style="color: #50A5CA;">8</span><strong style="color: #013365;">
+                        LPA</strong></h1>
                 <p><strong>Median CTC</strong></p>
             </div>
             <div class="col text-center" style="max-width: 33%;padding-left: 20px;">
-                <h1 id="cur_highest_ctc" style="color: #50A5CA;">35 <strong style="color: #013365;">LPA</strong></h1>
+                <h1><span id="cur_highest_ctc" style="color: #50A5CA;">35</span><strong style="color: #013365;">
+                        LPA</strong></h1>
                 <p><strong>Highest CTC</strong></p>
             </div>
             <div class="col text-center" style="max-width: 33%;padding-left: 20px;">
-                <h1 id="cur_average_ctc" style="color: #50A5CA;">11 <strong style="color: #013365;">LPA</strong></h1>
+                <h1><span id="cur_average_ctc" style="color: #50A5CA;">11</span><strong style="color: #013365;">
+                        LPA</strong></h1>
                 <p><strong>Average CTC</strong></p>
             </div>
         </div>
@@ -272,9 +296,8 @@
         <h1 style="font-size: 30px;font-weight: bold;">Contact</h1>
         <p style="margin-top: 10px;">For any inquiries or if you would like to participate in recruitment activities at
             IIIT Dharwad,
-            please contact the Chairman of the Career Guidance Cell (CGC) via email at <a
-                href="mailto:cgc@iiitdwd.ac.in">cgc@iiitdwd.ac.in</a>
-            and mark cc to the Placement Lead at <a href="mailto:ujwal@iiitdwd.ac.in">ujwal@iiitdwd.ac.in</a></p>
+            please contact the Career Guidance Cell (CGC) via email at <a
+                href="mailto:cgc@iiitdwd.ac.in">cgc@iiitdwd.ac.in</a>.
         <div class="row" style="margin-top: 25px;">
             <div class="col">
                 <h2 style="font-size: 18px;font-weight: bold;">CGC, Chairman</h2>
@@ -288,7 +311,7 @@
             </div>
         </div>
         <p style="margin-top: 10px;"><i><b style="color: #013365;">Phone/WhatsApp Calls:</b></i> Feel free to reach out
-            to Mr. Ujwal at +91 9886376600 for further
+            to Mr. Ujwal Doddamani at +91 9886376600 for further
             assistance.</p>
     </div>
     <div class="container" style="margin-top: 65px;max-width: 780px;">
@@ -337,12 +360,22 @@
         <div class="row" style="text-align: center;">
             <div class="col"><a class="btn btn-primary" href="/commitee_page/cgc-commitee.html"
                     style="width: 40%;background: #013365;margin-top: 18px;border-style: none;height: 50px;">
-                        <strong>View CGC Commitee</strong></a></div>
+                    <strong>View CGC Commitee</strong></a></div>
         </div>
         <div class="container" style="margin-top: 65px;max-width: 780px;">
 
         </div>
     </div>
+    <footer>
+        <p>Follow us on <a href="https://www.linkedin.com/company/career-guidance-cell-cgc-iiit-dharwad/"
+                target="_blank">Linked<svg xmlns="http://www.w3.org/2000/svg" width="19" height="19"
+                    fill="currentColor" class="bi bi-linkedin pb-1" viewBox="0 0 16 16">
+                    <path
+                        d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z" />
+                </svg></a> for latest updates!</p>
+    </footer>
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@10/swiper-bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -396,7 +429,6 @@
         fetchJSONFile("assets/data.json", function (response) {
             var data = JSON.parse(response);
             // Process the JSON data
-            console.log(data);
             document.getElementById('top_20_avg').innerHTML = data['avg_package_top_20%'];
             document.getElementById('cur_median_ctc').innerHTML = data['current_median_ctc'];
             document.getElementById('cur_highest_ctc').innerHTML = data['current_highest_ctc'];
