[Feat]: Added Images of student coords

--- a/commitee_page/program-commitee-page.html
+++ b/commitee_page/program-commitee-page.html
@@ -174,19 +174,19 @@ img{
     <div class="row">
 
       <div class="col-sm-3">
-        <img width="135px" height="150px" style="display: flex; margin: auto;" src="images2/sample.png" alt="Dr. Deepak KT"><br>
+        <img width="135px" height="150px" style="display: flex; margin: auto;" src="student_coordinators/IMG-20230709-WA0024 - OM MORENDHA IIIT Dharwad.jpg"<br>
         <b>Om Morendha </b><br>
         Lead Coordinator
       </div>
 
       <div class="col-sm-3">
-        <img width="135px" height="150px" style="display: flex; margin: auto;" src="images2/sample.png" alt="Dr. Deepak KT"><br>
+        <img width="135px" height="150px" style="display: flex; margin: auto;" src="student_coordinators/Shreyas_Bulbule.jpeg"<br>
         <b>Shreyas Bulbule </b><br>
         Lead Coordinator
       </div>
 
       <div class="col-sm-3">
-        <img width="135px" height="150px" style="display: flex; margin: auto;" src="images2/sample.png" alt="Dr. Deepak KT"><br>
+        <img width="135px" height="150px" style="display: flex; margin: auto;" src="student_coordinators/Screenshot_20230721-204026_Photos - GAURANG SUBHASH BELEKAR IIIT Dharwad.jpg"<br>
         <b>Gaurang Belekar </b><br>
         Lead Coordinator
       </div>
@@ -202,25 +202,25 @@ img{
     <div class="row">
 
       <div class="col-sm-3">
-        <img width="135px" height="150px" style="display: flex; margin: auto;" src="images2/sample.png" alt="Dr. Deepak KT"><br>
+        <img width="135px" height="150px" style="display: flex; margin: auto;" src="student_coordinators/Snapchat-1219141046 - SIDDHANT DIXIT IIIT Dharwad.jpg"<br>
         <b>Siddhant Dixit </b><br>
         Coordinator
       </div>
 
       <div class="col-sm-3">
-        <img width="135px" height="150px" style="display: flex; margin: auto;" src="images2/sample.png" alt="Dr. Deepak KT"><br>
+        <img width="135px" height="150px" style="display: flex; margin: auto;" src="student_coordinators/Nikhil B.jpeg"<br>
         <b>Bhashapangu Nikhil </b><br>
         Coordinator
       </div>
 
       <div class="col-sm-3">
-        <img width="135px" height="150px" style="display: flex; margin: auto;" src="images2/sample.png" alt="Dr. Deepak KT"><br>
+        <img width="135px" height="150px" style="display: flex; margin: auto;" src="student_coordinators/IMG_20230508_222905_671 - HARSH RAWAT IIIT Dharwad.jpg"<br>
         <b>Harsh Rawat </b><br>
         Coordinator
       </div>
 
       <div class="col-sm-3">
-        <img width="135px" height="150px" style="display: flex; margin: auto;" src="images2/sample.png" alt="Dr. Deepak KT"><br>
+        <img width="135px" height="150px" style="display: flex; margin: auto;" src="student_coordinators/IMG_20230817_194502 - RISHIKA KUMARI IIIT Dharwad.jpg"<br>
         <b>Rishika Kumari </b><br>
         Coordinator
       </div>
@@ -234,25 +234,25 @@ img{
     <div class="row">
 
       <div class="col-sm-3">
-        <img width="135px" height="150px" style="display: flex; margin: auto;" src="images2/sample.png" alt="Dr. Deepak KT"><br>
+        <img width="135px" height="150px" style="display: flex; margin: auto;" src="student_coordinators/Screenshot_20230806-195240_Photos - GARIMELLA AMRUTHAVALLI IIIT Dharwad.jpg"<br>
         <b>Garimella Amruthavalli </b><br>
         Coordinator
       </div>
 
       <div class="col-sm-3">
-        <img width="135px" height="150px" style="display: flex; margin: auto;" src="images2/sample.png" alt="Dr. Deepak KT"><br>
+        <img width="135px" height="150px" style="display: flex; margin: auto;" src="images2/sample.png"<br>
         <b>Bhashapangu Nikhil </b><br>
         Coordinator
       </div>
 
       <div class="col-sm-3">
-        <img width="135px" height="150px" style="display: flex; margin: auto;" src="images2/sample.png" alt="Dr. Deepak KT"><br>
+        <img width="135px" height="150px" style="display: flex; margin: auto;" src="images2/sample.png"<br>
         <b>Balusu Bhanu Prakash </b><br>
         Coordinator
       </div>
 
       <div class="col-sm-3">
-        <img width="135px" height="150px" style="display: flex; margin: auto;" src="images2/sample.png" alt="Dr. Deepak KT"><br>
+        <img width="135px" height="150px" style="display: flex; margin: auto;" src="images2/sample.png"<br>
         <b>Gaurav Agarwal </b><br>
         Coordinator
       </div>
@@ -265,25 +265,25 @@ img{
     <div class="row">
 
       <div class="col-sm-3">
-        <img width="135px" height="150px" style="display: flex; margin: auto;" src="images2/sample.png" alt="Dr. Deepak KT"><br>
+        <img width="135px" height="150px" style="display: flex; margin: auto;" src="images2/sample.png"<br>
         <b>Mohit Saini </b><br>
         Coordinator
       </div>
 
       <div class="col-sm-3">
-        <img width="135px" height="150px" style="display: flex; margin: auto;" src="images2/sample.png" alt="Dr. Deepak KT"><br>
+        <img width="135px" height="150px" style="display: flex; margin: auto;" src="images2/sample.png"<br>
         <b>B Tarun </b><br>
         Coordinator
       </div>
 
       <div class="col-sm-3">
-        <img width="135px" height="150px" style="display: flex; margin: auto;" src="images2/sample.png" alt="Dr. Deepak KT"><br>
+        <img width="135px" height="150px" style="display: flex; margin: auto;" src="images2/sample.png"<br>
         <b>Poornima </b><br>
         Coordinator
       </div>
 
       <div class="col-sm-3">
-        <img width="135px" height="150px" style="display: flex; margin: auto;" src="images2/sample.png" alt="Dr. Deepak KT"><br>
+        <img width="135px" height="150px" style="display: flex; margin: auto;" src="images2/sample.png"<br>
         <b>Kanishk Bajpai </b><br>
         Coordinator
       </div>
@@ -297,7 +297,7 @@ img{
     <div class="row">
 
       <div class="col-sm-3">
-        <img width="135px" height="150px" style="display: flex; margin: auto;" src="images2/sample.png" alt="Dr. Deepak KT"><br>
+        <img width="135px" height="150px" style="display: flex; margin: auto;" src="images2/sample.png"<br>
         <b>Rajnish </b><br>
         Coordinator
       </div>
