[Fix]: Fixed Styling of student coords

--- a/commitee_page/program-commitee-page.html
+++ b/commitee_page/program-commitee-page.html
@@ -47,10 +47,13 @@ h4 {
   }
   
 }
+
 img{
   border-radius: 90px;
   margin: auto;
+  object-fit: cover; /* Maintain aspect ratio while filling the container */
 }
+
 </style>
 
 <body>
@@ -67,14 +70,14 @@ img{
     <!-- row 1 -->
     <div class="row">
 
-      <div class="col-sm-3">
+      <div class="col-sm-3 ">
         <img width="135px" height="150x" style="display: flex; margin: auto;"src="https://www.iiitdwd.ac.in/img/faculty/Prakash.jpg" alt=""><br>
         <b><a href="https://www.iiitdwd.ac.in/Dr.Prakash.php" style="color: black;"
             rel="noreferrer noopener" target="_blank">Dr. Prakash Pawar</a></b><br>
           Chairman 
       </div>
 
-      <div class="col-sm-3">
+      <div class="col-sm-3 ">
         <img width="135px" height="150px" style="display: flex; margin: auto;" src="../assets/img/ujwal.jpeg" alt="Mr. Ujwal Doddamani"><br>
         <b><a href="https://www.linkedin.com/in/ujwaldoddamani/" style="color: black;"
           rel="noreferrer noopener" target="_blank">Mr. Ujwal Doddamani</a></b><br>
@@ -90,25 +93,25 @@ img{
     <div class="row">
 
       
-      <div class="col-sm-3">
+      <div class="col-sm-3 ">
         <img width="135px" height="150px" style="display: flex; margin: auto;" src="https://iiitdwd.ac.in/img/faculty/deepak.jpeg" alt="Dr. Deepak KT"><br>
         <b>Dr. Deepak KT</b><br>
         Ex-officio Member
       </div>
 
-      <div class="col-sm-3">
+      <div class="col-sm-3 ">
         <img width="135px" height="150px" style="display: flex; margin: auto;" src="https://iiitdwd.ac.in/img/faculty/pavan.jpg" alt="Dr. Pavan Kumar"><br>
         <b>Dr. Pavan Kumar </b><br>
         Ex-officio Member
       </div>
 
-      <div class="col-sm-3">
+      <div class="col-sm-3 ">
         <img width="135px" height="150px" style="display: flex; margin: auto;" src="https://iiitdwd.ac.in/img/faculty/Sunil.jpeg" alt="Dr. Sunil Saumya"><br>
         <b>Dr. Sunil Saumya </b><br>
         Ex-officio Member
       </div>
 
-      <div class="col-sm-3">
+      <div class="col-sm-3 ">
         <img width="135px" height="150px" style="display: flex; margin: auto;" src="https://iiitdwd.ac.in/img/faculty/aswath.jpeg" alt="Dr. Ashwath Babu H"><br>
         <b>Dr. Ashwath Babu H </b><br>
         Ex-officio Member
@@ -121,25 +124,25 @@ img{
     <div class="row">
 
 
-      <div class="col-sm-3">
+      <div class="col-sm-3 ">
         <img width="135px" height="150px" style="display: flex; margin: auto;" src="https://iiitdwd.ac.in/img/faculty/Animesh.jpg" alt="Dr. Animesh Chaturvedi"><br>
         <b>Dr. Animesh Chaturvedi </b><br>
         Member
       </div>
 
-      <div class="col-sm-3">
+      <div class="col-sm-3 ">
         <img width="135px" height="150px" style="display: flex; margin: auto;" src="https://www.iiitdwd.ac.in/img/faculty/yelmewad.jpg" alt="Dr. Pramod Yelmewad"><br>
         <b>Dr. Pramod Yelmewad </b><br>
         Member
       </div>
 
-      <div class="col-sm-3">
+      <div class="col-sm-3 ">
         <img width="135px" height="150px" style="display: flex; margin: auto;" src="https://iiitdwd.ac.in/img/faculty/Manjunath.jpg" alt="Dr. Manjunath Vanahalli"><br>
         <b>Dr. Manjunath Vanahalli </b><br>
         Member
       </div>
 
-      <div class="col-sm-3">
+      <div class="col-sm-3 ">
         <img width="135px" height="150px" style="display: flex; margin: auto;" src="https://iiitdwd.ac.in/img/faculty/vivekraj.jpg" alt="Dr. Vivek Raj"><br>
         <b>Dr. Vivek Raj </b><br>
         Member
@@ -154,13 +157,13 @@ img{
     <div class="row">
 
 
-      <div class="col-sm-3">
+      <div class="col-sm-3 ">
         <img width="135px" height="150px" style="display: flex; margin: auto;" src="https://iiitdwd.ac.in/img/faculty/Prabhu_Prasad.png" alt="Dr. Prabhu Prasad BM"><br>
         <b>Dr. Prabhu Prasad BM </b><br>
         Member
       </div>
 
-      <div class="col-sm-3">
+      <div class="col-sm-3 ">
         <img width="135px" height="150px" style="display: flex; margin: auto;" src="https://iiitdwd.ac.in/img/faculty/Anushree.jpg" alt="Dr. Anushree Kini"><br>
         <b>Dr. Anushree Kini </b><br>
         Member
@@ -173,19 +176,19 @@ img{
     <hr>
     <div class="row">
 
-      <div class="col-sm-3">
+      <div class="col-sm-3 ">
         <img width="135px" height="150px" style="display: flex; margin: auto;" src="student_coordinators/IMG-20230709-WA0024 - OM MORENDHA IIIT Dharwad.jpg"<br>
         <b>Om Morendha </b><br>
         Lead Coordinator
       </div>
 
-      <div class="col-sm-3">
+      <div class="col-sm-3 ">
         <img width="135px" height="150px" style="display: flex; margin: auto;" src="student_coordinators/Shreyas_Bulbule.jpeg"<br>
         <b>Shreyas Bulbule </b><br>
         Lead Coordinator
       </div>
 
-      <div class="col-sm-3">
+      <div class="col-sm-3 ">
         <img width="135px" height="150px" style="display: flex; margin: auto;" src="student_coordinators/Screenshot_20230721-204026_Photos - GAURANG SUBHASH BELEKAR IIIT Dharwad.jpg"<br>
         <b>Gaurang Belekar </b><br>
         Lead Coordinator
@@ -201,25 +204,25 @@ img{
 
     <div class="row">
 
-      <div class="col-sm-3">
+      <div class="col-sm-3 ">
         <img width="135px" height="150px" style="display: flex; margin: auto;" src="student_coordinators/Snapchat-1219141046 - SIDDHANT DIXIT IIIT Dharwad.jpg"<br>
         <b>Siddhant Dixit </b><br>
         Coordinator
       </div>
 
-      <div class="col-sm-3">
+      <div class="col-sm-3 ">
         <img width="135px" height="150px" style="display: flex; margin: auto;" src="student_coordinators/Nikhil B.jpeg"<br>
         <b>Bhashapangu Nikhil </b><br>
         Coordinator
       </div>
 
-      <div class="col-sm-3">
+      <div class="col-sm-3 ">
         <img width="135px" height="150px" style="display: flex; margin: auto;" src="student_coordinators/IMG_20230508_222905_671 - HARSH RAWAT IIIT Dharwad.jpg"<br>
         <b>Harsh Rawat </b><br>
         Coordinator
       </div>
 
-      <div class="col-sm-3">
+      <div class="col-sm-3 ">
         <img width="135px" height="150px" style="display: flex; margin: auto;" src="student_coordinators/IMG_20230817_194502 - RISHIKA KUMARI IIIT Dharwad.jpg"<br>
         <b>Rishika Kumari </b><br>
         Coordinator
@@ -233,29 +236,30 @@ img{
 
     <div class="row">
 
-      <div class="col-sm-3">
+      <div class="col-sm-3 ">
         <img width="135px" height="150px" style="display: flex; margin: auto;" src="student_coordinators/Screenshot_20230806-195240_Photos - GARIMELLA AMRUTHAVALLI IIIT Dharwad.jpg"<br>
         <b>Garimella Amruthavalli </b><br>
         Coordinator
       </div>
 
-      <div class="col-sm-3">
-        <img width="135px" height="150px" style="display: flex; margin: auto;" src="images2/sample.png"<br>
-        <b>Bhashapangu Nikhil </b><br>
-        Coordinator
-      </div>
-
-      <div class="col-sm-3">
-        <img width="135px" height="150px" style="display: flex; margin: auto;" src="images2/sample.png"<br>
-        <b>Balusu Bhanu Prakash </b><br>
-        Coordinator
-      </div>
-
-      <div class="col-sm-3">
-        <img width="135px" height="150px" style="display: flex; margin: auto;" src="images2/sample.png"<br>
+      <div class="col-sm-3 ">
+        <img width="135px" height="150px" style="display: flex; margin: auto;" src="student_coordinators/Screenshot 2023-08-09 at 3.34.18 PM - GAURAV AGARWAL IIIT Dharwad.png"<br>
         <b>Gaurav Agarwal </b><br>
         Coordinator
       </div>
+
+      <div class="col-sm-3 ">
+        <img width="135px" height="150px" style="display: flex; margin: auto;" src="student_coordinators/RAJNISH-20BEC035 - RAJNISH KUMAR IIIT Dharwad.jpg"<br>
+        <b>Rajnish Kumar</b><br>
+        Coordinator
+      </div>
+
+      <div class="col-sm-3 ">
+        <img width="135px" height="150px" style="display: flex; margin: auto;" src="student_coordinators/IMG-20230724-WA0001 - MOHIT SAINI IIIT Dharwad.jpg"<br>
+        <b>Mohit Saini </b><br>
+        Coordinator
+      </div>
+
 
     </div>
 
@@ -264,26 +268,20 @@ img{
 
     <div class="row">
 
-      <div class="col-sm-3">
-        <img width="135px" height="150px" style="display: flex; margin: auto;" src="images2/sample.png"<br>
-        <b>Mohit Saini </b><br>
-        Coordinator
-      </div>
-
-      <div class="col-sm-3">
-        <img width="135px" height="150px" style="display: flex; margin: auto;" src="images2/sample.png"<br>
+      <div class="col-sm-3 ">
+        <img width="135px" height="150px" style="display: flex; margin: auto;" src="student_coordinators/IMG_20231004_133647 - B SRI VENKATA SAI TARUN IIIT Dharwad.jpg"<br>
         <b>B Tarun </b><br>
         Coordinator
       </div>
 
-      <div class="col-sm-3">
-        <img width="135px" height="150px" style="display: flex; margin: auto;" src="images2/sample.png"<br>
+      <div class="col-sm-3 ">
+        <img width="135px" height="150px" style="display: flex; margin: auto;" src="student_coordinators/poornima_pic - POORNIMA IIIT Dharwad.jpeg"<br>
         <b>Poornima </b><br>
         Coordinator
       </div>
 
-      <div class="col-sm-3">
-        <img width="135px" height="150px" style="display: flex; margin: auto;" src="images2/sample.png"<br>
+      <div class="col-sm-3 ">
+        <img width="135px" height="150px" style="display: flex; margin: auto;" src="student_coordinators/anonymous_avatars_grey_circles (1).jpg"<br>
         <b>Kanishk Bajpai </b><br>
         Coordinator
       </div>
@@ -293,17 +291,6 @@ img{
 
 
     <hr>
-
-    <div class="row">
-
-      <div class="col-sm-3">
-        <img width="135px" height="150px" style="display: flex; margin: auto;" src="images2/sample.png"<br>
-        <b>Rajnish </b><br>
-        Coordinator
-      </div>
-
-
-    </div>
 
 
 
