--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
             </div>
         </div>
         <div class="row" style="text-align: center;">
-            <div class="col"><a class="btn btn-primary" href="/commitee_page/cgc-commitee.html"
+            <div class="col"><a class="btn btn-primary" href="/commitee_page"
                     style="width: 40%;background: #013365;margin-top: 18px;border-style: none;height: 50px;">
                     <strong>View CGC Commitee</strong></a></div>
         </div>
